--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ requires-python = ">=3.9"
 dependencies = [
   "PyYAML",
   "jsonschema",
+  "matplotlib>=3.8",
+  "Jinja2>=3.1",
 ]
 
 [project.scripts]
