spi-005c: Add aCompCor confounds (cord/WM/CSF masks + PCA)
- Add masks & acompcor config blocks to base.yaml and study.yaml
- Extend schema with validation for masks (source, binarize_thr) and acompcor (tissues, n_components, highpass, etc.)
- Add mask_paths() helper to registration.py for EPI-space mask paths
- Add deriv_cord_mask, deriv_wm_mask, deriv_csf_mask to deriv.py
- Implement aCompCor utilities in confounds.py:
  - load_bold_and_apply_crop()
  - extract_mask_timeseries()
  - acompcor_pcs()
  - append_acompcor()
- Update spi07_confounds.sh to accept mask paths and acompCor config via env vars
- Wire mask dependencies and acompCor config to confounds rule in Snakefile
- Add aCompCor metadata to QC reports (workflow/lib/qc.py)
- Add scipy, scikit-learn, nibabel to pyproject.toml dependencies

Major Snakefile refactoring:
- Convert mppca, crop_detect, motion, confounds to per-run wildcard rules
- Fix wildcard patterns to use {sub} instead of sub-{sub} (sub field already includes prefix)
- Add find_row_by_wildcards() helper to resolve manifest rows by wildcards
- Update rule all to use expand() with direct file paths instead of aggregate rule names
- Update aggregate rules (preproc_all, reports_all, registration_all) to explicitly depend on manifest_deriv

All CI gates pass (snakemake --lint, pre-commit, snakemake -n).

--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -52,6 +52,18 @@ options:
     dvars_thresh: 1.5             # DVARS threshold (0.5-5.0)
     min_contig_vols: 5            # minimum consecutive non-censored volumes to keep (3-50)
     pad_vols: 1                   # padding around censored frames (0-3)
+  masks:
+    enable: true                  # require SCT pipeline or fallbacks
+    source: "sct"                 # enum: sct|provided|none
+    binarize_thr: 0.5             # threshold for probabilistic masks (if any)
+  acompcor:
+    enable: true
+    tissues: ["cord", "wm", "csf"]
+    n_components_per_tissue: 5     # cap, compute up to available rank
+    highpass_hz: 0.008            # high-pass filter frequency
+    detrend: true                 # detrend time series
+    standardize: true             # standardize time series
+    explained_variance_min: 0.0   # keep PCs regardless; future could min variance
   first_level:
     engine: "feat"                 # feat | pyglm (pyglm later)
     feat_variant: "block_15s_conv3"
