--- a/configs/study.yaml
+++ b/configs/study.yaml
@@ -52,6 +52,18 @@ options:
     dvars_thresh: 1.5
     min_contig_vols: 5
     pad_vols: 1
+  masks:
+    enable: true
+    source: "sct"
+    binarize_thr: 0.5
+  acompcor:
+    enable: true
+    tissues: ["cord", "wm", "csf"]
+    n_components_per_tissue: 5
+    highpass_hz: 0.008
+    detrend: true
+    standardize: true
+    explained_variance_min: 0.0
   first_level:
     engine: "feat"
     feat_variant: "block_15s_conv3"
